# rulate

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLUSTER_REFACTOR_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_SUMMARY.md  Dockerfile  LICENSE  Makefile  README.md  SPECIFICATION.md  TASKS.md  codecov.yml  docker-compose.yml  pyproject.toml  test_import_export.py
.claude/: settings.json  settings.local.json
.claude/plans/: production-ready.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-code-review.yml  test.yml
api/: config.py  logging_config.py  main.py  security.py
api/database/: connection.py  models.py
api/middleware/: logging.py
api/models/: schemas.py
api/routers/: catalogs.py  clusters.py  evaluation.py  health.py  import_export.py  rulesets.py  schemas.py
docs/: FUTURE_TASKS.md  SPECIFICATION.md  UX_POLISH_SUMMARY.md
docs/deployment/: README.md
docs/patterns/: coverage-layer-conflicts.md
docs/roadmap/: 00-gender-agnostic-wardrobe.md  01-production-ready.md  02-scale-and-performance.md  03-smart-evaluation-engine.md  04-intelligence-and-insights.md  05-rich-visualizations.md  06-team-collaboration.md  07-extensibility-and-integration.md  08-developer-adoption.md  09-mobile-and-offline.md  10-production-hardening.md  CHANGELOG.md  index.md  wont-do.md
examples/wardrobe/: catalog.yaml  catalog_v2.yaml  cluster_rules.yaml  cluster_rules_v2.yaml  rules.yaml  rules_v2.yaml  schema.yaml  schema_v2.yaml  v1.json  v2.json
rulate/: __init__.py  cli.py
rulate/engine/: __init__.py  cluster_condition_evaluator.py  cluster_evaluator.py  condition_evaluator.py  evaluator.py  operators.py
rulate/models/: __init__.py  catalog.py  cluster.py  evaluation.py  rule.py  schema.py
rulate/utils/: __init__.py  exporters.py  loaders.py
scripts/: seed_database.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_catalogs.py  test_api_cluster_builder.py  test_api_clusters.py  test_api_evaluation.py  test_api_health.py  test_api_import_export.py  test_api_import_export_cluster_rulesets.py  test_api_items.py  test_api_logging_middleware.py  test_api_rulesets.py  test_api_schemas.py  test_wardrobe_v2_integration.py
tests/unit/: test_catalog.py  test_cli.py  test_cluster_evaluator.py  test_condition_evaluator.py  test_config.py  test_evaluation.py  test_evaluator.py  test_exporters.py  test_loaders.py  test_logging_config.py  test_operators.py  test_rule.py  test_schema.py  test_security.py
web/: .prettierignore  E2E_TESTING.md  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
web/e2e/: catalog-management.spec.ts  cluster-builder-graph.spec.ts  cluster-builder.spec.ts  explorer.spec.ts  navigation.spec.ts  rule-editor.spec.ts  schema-management.spec.ts  setup.ts  tooltip-viewport.spec.ts  ux-components.spec.ts
web/src/: app.html  test-setup.ts
web/src/lib/: utils.test.ts
web/src/lib/api/: client.test.ts  client.ts
web/src/lib/components/: ModalContainer.svelte  Navigation.svelte  Navigation.test.ts  RuleEditor.svelte  RuleEditor.test.ts  ToastContainer.svelte
web/src/lib/data/: operators.ts  rule-templates.ts
web/src/lib/forms/: attributes.test.ts  attributes.ts
web/src/lib/stores/: modal.svelte.test.ts  modal.svelte.ts  theme.svelte.test.ts  theme.svelte.ts  toast.svelte.test.ts  toast.svelte.ts
web/src/lib/test-utils/: fixtures.ts  index.ts  mocks.ts  render-helpers.ts
web/src/lib/utils/: unsaved-changes.svelte.ts  unsaved-changes.test.ts  validation.test.ts  validation.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.test.ts  page.test.ts
web/src/routes/catalogs/: +page.svelte  page.test.ts
web/src/routes/cluster-builder/: +page.svelte  styles.ts
web/src/routes/cluster-rulesets/: +page.svelte
web/src/routes/clusters/: +page.svelte
web/src/routes/explore/: +page.svelte  +page.test.ts  page.test.ts  styles.ts
web/src/routes/import-export/: +page.svelte  page.test.ts
web/src/routes/matrix/: +page.svelte  +page.test.ts  page.test.ts
web/src/routes/rulesets/: +page.svelte  page.test.ts
web/src/routes/schemas/: +page.svelte  +page.test.ts  page.test.ts
(+47 files in other folders)
